[package]
name = "rsxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"]}
tokio = { version = "1", default-features = false, features = ["full"] }
serde_json = { version = "1", default-features = false }
serde-xml-rs = { version = "0.6", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"